--- a/js_demo.html
+++ b/js_demo.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./styles/global.css">
+    <style>
+
+    </style>
 </head>
+
 <body>
-    
+
     <h1 id="title"></h1>
     <h3 id="sub-heading"></h3>
     <button id="btnOne" on>Greet</button>
     <script src="./scripts/quickstart.js"></script>
 </body>
+
 </html>
